<package format="2">
  <name>vrep_ros_interface</name>
  <description>V-REP plugin for ROS interface</description>
  <maintainer email="marc@coppeliarobotics.com">Marc</maintainer>
  <version>3.3.0</version>
  <author>Federico Ferri</author>
  <license>BSD2</license>
  <url>http://www.coppeliarobotics.com</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
